# xcub-moveit2

./: .gitignore  Dockerfile  README.md  ci_env.yml  cyclonedds.xml  env.yaml  pixi.toml  pixi_gz_env.sh
.github/workflows/: bump_package_versions.yaml  ci.yaml
all_packages/: CMakeLists.txt
ergocub_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ergocub_moveit_config/config/: ergoCub.ros2_control.xacro  ergoCub.srdf  ergoCub.urdf.xacro  ergocub.ros2_control.xacro  ergocub.srdf  ergocub_world.sdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
ergocub_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
grasp_moveit/: CMakeLists.txt  package.xml
grasp_moveit/src/: grasp.cpp
icub_controller/: CMakeLists.txt  icub_controller.xml  package.xml
icub_controller/include/icub_controller/: icub_controller.hpp  visibility_control.h
icub_controller/src/: icub_controller.cpp
icub_controller/test/: test_load_icub_controller.cpp
icub_moveit/: CMakeLists.txt  package.xml
icub_moveit/launch/: icub.launch.py  icub_moveit.launch.py  launch_icub.launch.py  spawn_icub.py
icub_moveit/src/: icub_moveit.cpp
icub_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
icub_moveit_config/config/: iCub.ros2_control.xacro  iCub.srdf  iCub.urdf.xacro  iCub_robot.urdf  icub.ros2_control.xacro  icub.rviz  icub.srdf  icub.urdf.xacro  icub_world.sdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
icub_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_controller/: CMakeLists.txt  package.xml  robot_controller.xml
robot_controller/include/robot_controller/: robot_controller.hpp  visibility_control.h
robot_controller/test/: test_load_icub_controller.cpp
robot_moveit/: CMakeLists.txt  package.xml
robot_moveit/launch/: circle_demo.launch.py  grasp_demo.launch.py  launch_icub.launch.py  robot.launch.py  robot_controls.launch.py  robot_sim.launch.py
robot_moveit/src/: robot_moveit.cpp
src/ergocub_moveit_config/: package.xml
src/ergocub_moveit_config/config/: ergocub.urdf.xacro  joint_limits.yaml  kinematics.yaml
src/ergocub_moveit_config/launch/: demo.launch.py
src/icub_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml
src/robot_controller/src/: robot_controller.cpp
src/robot_moveit/launch/: circle_demo.launch.py
src/robot_moveit/src/: robot_moveit.cpp
src/test_controller/src/: test_controller.cpp
test_controller/: CMakeLists.txt  package.xml  report.md
test_controller/launch/: test_controller.launch.py
test_controller/utils/: trac_ik_params_tuning.m  workspace_estimation.m
test_solver/: CMakeLists.txt  package.xml
test_solver/launch/: test_solver.launch.py
test_solver/src/: test_solver.cpp
xcub_ergocub_moveit_config/: CMakeLists.txt  package.xml
xcub_ergocub_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
xcub_grasp/: CMakeLists.txt  package.xml
xcub_icub_moveit_config/: CMakeLists.txt  package.xml
xcub_icub_moveit_config/config/: joint_limits.yaml
xcub_icub_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
xcub_moveit2_all_packages/: CMakeLists.txt
xcub_moveit_all_packages/: CMakeLists.txt
xcub_moveit_grasp/: CMakeLists.txt  package.xml
xcub_moveit_robot/: CMakeLists.txt  package.xml
xcub_moveit_robot/launch/: circle_demo.launch.py  grasp_demo.launch.py  robot.launch.py  robot_controls.launch.py  robot_sim.launch.py  spawn_model.py
xcub_moveit_test_controller/: CMakeLists.txt  package.xml
xcub_moveit_test_controller/launch/: test_controller.launch.py
xcub_moveit_test_controller/src/: test_controller.cpp
xcub_robot/: CMakeLists.txt  package.xml
xcub_robot/launch/: circle_demo.launch.py  grasp_demo.launch.py  launch_icub.launch.py  robot.launch.py  robot_sim.launch.py  spawn_model.py
xcub_ros2_controllers/: CMakeLists.txt  package.xml  xcub_ros2_controllers.xml
