<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xcub_moveit_grasp</name>
  <version>0.4.0</version>
  <description>ROS2 package for grasping task</description>
  <maintainer email="martina.gloria@iit.it">Martina Gloria</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>moveit_visual_tools</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>controller_manager</depend>
  <depend>gz_ros2_control</depend>
  <depend>yarp_control_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
